src/objects/ZV_Player__c.object
<CustomObject>
    <fields>
        <fullName>IconName__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IconVariant__c</fullName>
        <label>Icon Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StrategyClassName__c</fullName>
        <label>Strategy Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZVP-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Player Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <recordTypes>
        <fullName>Human</fullName>
        <active>true</active>
        <label>Human</label>
    </recordTypes>
    <recordTypes>
        <fullName>Robot</fullName>
        <active>true</active>
        <label>Robot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Human_Player_has_User</fullName>
        <active>true</active>
        <description>If player is human, User must have a lookup value.</description>
        <errorConditionFormula>AND(
  $RecordType.Name = &quot;Human&quot;,
   ISBLANK( User__c)
)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>If player is human, User must have a lookup value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Human_should_Not_have_a_Strategy</fullName>
        <active>true</active>
        <description>Human players should not have a strategy.</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Human&apos;
&amp;&amp; NOT(ISBLANK( StrategyClassName__c ))</errorConditionFormula>
        <errorDisplayField>StrategyClassName__c</errorDisplayField>
        <errorMessage>Human players should not have a strategy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Robots_should_have_a_Strategy</fullName>
        <active>true</active>
        <description>Robots should have a Strategy</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Robot&apos;
&amp;&amp; ISBLANK( StrategyClassName__c )</errorConditionFormula>
        <errorDisplayField>StrategyClassName__c</errorDisplayField>
        <errorMessage>Robots should have a Strategy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Robots_should_not_have_users</fullName>
        <active>true</active>
        <description>Robot should not have a user.</description>
        <errorConditionFormula>AND(
  $RecordType.Name = &quot;Robot&quot;,
  NOT(ISBLANK(User__c))
)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Robot should not have a user.</errorMessage>
    </validationRules>
</CustomObject>